# Gab-Engine-JRDW

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gab-engine.sln  gab-engine.vcxproj  gab-engine.vcxproj.filters  vcpkg.json
dependencies/: CMakeLists.txt
dependencies/glad/: glad.h
gab-engine/: CMakeLists.txt  cmake_install.cmake  gab-engine.cpp  gab-engine.h
gab-engine/Datatypes/: CMakeLists.txt  Matrix4.h  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h  Vector4.h  Vectors.h  cmake_install.cmake  gbe_datatypes.vcxproj  gde_datatypes.vcxproj
gab-engine/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  cmake_install.cmake  gbe_editor.vcxproj  gde_editor.vcxproj.filters
gab-engine/Editor/Component/: CMakeLists.txt  Transform.h  gbe_component.vcxproj
gab-engine/Editor/Global/: CMakeLists.txt
gab-engine/Editor/Input/: ActionImplementation.h  CMakeLists.txt  gbe_input.vcxproj  gbe_input.vcxproj.filters
gab-engine/Editor/ObjectFunctions/: CMakeLists.txt  gbe_objectfunctions.vcxproj.filters
gab-engine/Editor/ObjectHandlers/: CMakeLists.txt  gbe_objecthandlers.vcxproj  gbe_objecthandlers.vcxproj.filters
gab-engine/Editor/Objects/: CMakeLists.txt  Object.cpp  Object.h  gbe_objects.vcxproj
gab-engine/Engine/: Engine.cpp  Engine.h
gab-engine/Engine/Datatypes/: Vector3.h  Vector4.h  Vector_base.h  Vectors.h
gab-engine/Engine/Graphics/: Framebuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.h  RenderPipeline.h  Shader.cpp  Shader.h  Skybox.h  Texture.h
gab-engine/Engine/Input/: ActionImplementation.h
gab-engine/Engine/Objects/: Object.h
gab-engine/Engine/Window/: Window.cpp  Window.h
gab-engine/GUI/: GUIPipeline.cpp
gab-engine/Graphics/: CMakeLists.txt  DrawCall.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  RenderPipeline.cpp  RenderPipeline.h  Shader.cpp  Texture.h  cmake_install.cmake  gbe_graphics.vcxproj  gbe_graphics.vcxproj.filters  gde_graphics.vcxproj
gab-engine/Window/: CMakeLists.txt  Window.cpp  Window.h  cmake_install.cmake  gbe_window.vcxproj  gbe_window.vcxproj.filters  gde_window.vcxproj
src/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  gab-engine.cpp  gab-engine.h  gab-engine.vcxproj  gab-engine.vcxproj.filters  gbe.vcxproj  gbe.vcxproj.filters  gbe_engine_src.vcxproj  gbe_engine_src.vcxproj.filters
src/Asset/: AssetDeserializer.h  AssetLoader.cpp  AssetLoader.h  AssetReference.h  AssetTypeLoader.h  BaseAsset.cpp  BaseAsset.h  CMakeLists.txt  gbe_asset.h
src/Asset/AssetInjection/: AssetReference.h  AssetSocket.cpp  AssetSocket.h
src/Asset/AssetLoading/: AssetDeserializer.cpp  AssetDeserializer.h  AssetLoader.h
src/Asset/AssetTypeLoaders/: TextureLoader.h
src/Asset/AssetTypes/: Audio.cpp  Audio.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Asset/Parsing/: Json.h  gbeParser.h
src/Audio/: AudioLoader.cpp  AudioLoader.h  AudioPipeline.cpp  AudioPipeline.h  CMakeLists.txt  gbe_audio.h
src/Datatypes/: CMakeLists.txt  Matrix4.cpp  Matrix4.h  Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  cmake_install.cmake  gbe_datatypes.vcxproj  gbe_datatypes.vcxproj.filters  gde_datatypes.vcxproj.filters
src/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  cmake_install.cmake  gbe_editor.h  gbe_editor.vcxproj  gbe_editor.vcxproj.filters  gde_editor.vcxproj
src/Editor/App/: EditorApp.cpp  EditorApp.h  RootWindow.cpp  RootWindow.h
src/Editor/Component/: Transform.h  gbe_component.vcxproj.filters
src/Editor/Global/: gbe_global.vcxproj  gbe_global.vcxproj.filters
src/Editor/Gui/: ColorpickerWindow.cpp  ColorpickerWindow.h  CreditsWindow.cpp  CreditsWindow.h  GuiWindow.cpp  GuiWindow.h  ImageDropzone.cpp  ImageDropzone.h  InspectorData.h  InspectorWindow.cpp  InspectorWindow.h
src/Editor/Input/: KeyDefines.h
src/Editor/ObjectFunctions/: ObjectFunctions.h  gbe_objectfunctions.vcxproj
src/Editor/ObjectHandlers/: ObjectHandler.h  PhysicsHandler.cpp  PhysicsHandler.h
src/Editor/Objects/: Object.cpp  Object.h  Root.h  gbe_objects.vcxproj.filters
src/Editor/Utility/: ModelExport.cpp  ModelExport.h
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  gbe_engine.h
src/Engine/Component/: Transform.cpp  Transform.h  TransformChangeType.h
src/Engine/Global/: Time.cpp  Time.h
src/Engine/Input/: ActionImplementation.h  InputAction.h  InputSystem.h  KeyDefines.h
src/Engine/ObjectFunctions/: EarlyUpdate.h  LateUpdate.h  PhysicsUpdate.h  Update.h
src/Engine/ObjectHandlers/: ColliderHandler.cpp  ColliderHandler.h  InputHandler.h  ObjectHandler.h  PhysicsHandler.cpp  PhysicsHandler.h
src/Engine/Objects/: GenericObject.cpp  GenericObject.h  Object.cpp  Object.h  Objects.h  Root.cpp  Root.h
src/GUI/: CMakeLists.txt  gb_canvas.cpp  gb_canvas.h  gb_rect.cpp  gb_rect.h  gbe_gui.h  gbuiPipeline.cpp  gbuiPipeline.h
src/GUI/interfaces/: gb_onClick.h  (+2 more)
src/Graphics/: CMakeLists.txt  DrawCall.cpp  DrawCall.h  Framebuffer.h  GraphicsAssetLoader.cpp  GraphicsAssetLoader.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderPipeline.cpp  RenderPipeline.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  cmake_install.cmake  gbe_graphics.h  gbe_graphics.vcxproj  gbe_graphics.vcxproj.filters
src/Math/: CMakeLists.txt  Quaternion.cpp  Quaternion.h  TrackedVariable.h  Vector2Int.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  gbe_math.h
src/Network/: CMakeLists.txt  Network.h
src/Physics/: CMakeLists.txt  PhysicsBody.cpp  PhysicsBody.h  PhysicsDatatypes.cpp  PhysicsDatatypes.h  PhysicsPipeline.cpp  PhysicsPipeline.h  PhysicsVector.cpp  PhysicsVector.h  Raycast.cpp  Raycast.h  RaycastAll.cpp  RaycastAll.h  Rigidbody.cpp  Rigidbody.h  TriggerRigidBody.cpp  TriggerRigidBody.h  gbe_physics.h
src/Window/: CMakeLists.txt  Window.cpp  Window.h  WindowEvents.h  cmake_install.cmake  gbe_window.h  gbe_window.vcxproj  gbe_window.vcxproj.filters
(+764 files in other folders)
